--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Firebase dependencies
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  
+  # Google Sign-In
+  google_sign_in: ^6.2.1
+  cloud_functions: ^6.0.0
+  flutter_line_sdk: ^2.6.1
 
 dev_dependencies:
   flutter_test:
